# advent-of-code

./: .gitignore  README.md  inputs.json  pyproject.toml  reportrepair.py
2020/: inputs.json  reportrepair1.py  reportrepair2.py  utils.py
2020/Python/: day_02_task1.py  day_02_task2.py  day_03_task1.py  day_03_task2.py  day_04_task1.py  day_04_task2.py  day_05_task1.py  day_05_task2.py  day_06_task1.py  day_06_task2.py  day_07_task1.py  day_07_task2.py  day_08_task1.py  day_08_task2.py  day_09_task1.py  day_09_task2.py  day_10_task1.py  day_10_task2.py  day_11_task1.py  day_11_task2.py  day_12_task1.py  day_12_task2.py  day_13_task1.py  day_13_task2.py  day_2_task1.py  day_2_task2.py  day_3_task1.py  day_3_task2.py  day_4_task1.py  day_4_task2.py  day_5_task1.py  day_5_task2.py  day_6_task1.py  day_7_task1.py  day_8_task2.py  day_9_task1.py  day_9_task2.py  utils.py
2021/: README.md  helpers.py
2021/solutions/: day_01_task_01.py  day_01_task_02.py  day_02_task_01.py  day_02_task_02.py  day_03_task_01.py  day_03_task_02.py  day_04_task_01.py  day_04_task_02.py  day_05_task_01.py  day_05_task_02.py  day_06_task_01.py  day_06_task_02.py  day_07_task_01.py  day_07_task_02.py  day_08_task_01.py  day_08_task_02.py  day_09_task_01.py  day_09_task_02.py  day_10_task_01.py  day_10_task_02.py  helpers.py
2023/solutions/: day_01_task_01.py  day_01_task_02.py  day_02_task_01.py  day_02_task_02.py  day_03_task_01.py  day_03_task_02.py  day_04_task_01.py  day_04_task_02.py  day_05_task_01.py  day_05_task_02.py  day_06_task_01.py  day_06_task_02.py  day_07_task_01.py  helpers.py  (+5 more)
(+35 files in other folders)
