[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [{ name = "Anand Krishna", email = "40204976+anand2312@users.noreply.github.com" }]
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "requests>=2.26.0,<3",
    "python-dotenv>=0.19.2,<0.20",
    "numpy>=1.24.4,<2",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
