[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [{ name = "Anand Krishna", email = "40204976+anand2312@users.noreply.github.com" }]
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "requests>=2.26.0,<3",
    "python-dotenv>=0.19.2,<0.20",
    "numpy>=2.3.5",
]

[dependency-groups]
dev = []
